# Mah-jong

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt
cmake/: clang-tools.cmake
include/: MajManager.hpp  TileTypes.hpp  Tiles.hpp
include/Common/: Common.hpp  Global.hpp
include/Rules/: RuleMatcher.hpp  WhiteDragonRule.hpp
include/Tile/: Expose.hpp  GlobalTileManager.hpp  Hand.hpp  MajManager.hpp  PlayerTileManager.hpp  RiichiDetector.hpp  TileTypes.hpp  Tiles.hpp
include/Win/: Meld.hpp  WinningDetector.hpp
include/Yakus/: DoraYaku.hpp  Meld.hpp  OnePointYaku.hpp  ThreePointYaku.hpp  TwoPointYaku.hpp  YakuMatcher.hpp  Yakuman.hpp  YakusMatcher.hpp
src/: CMakeLists.txt  Mahjong.cpp  MajManager.cpp  Tiles.cpp
src/Common/: Global.cpp
src/Tile/: Expose.cpp  GlobalTileManager.cpp  Hand.cpp  MajManager.cpp  PlayerTileManager.cpp  RiichiDetector.cpp  Tiles.cpp
src/Win/: Meld.cpp  WinningDetector.cpp
src/Yakus/: DoraYaku.cpp  Meld.cpp  OnePointYaku.cpp  ThreePointYaku.cpp  TwoPointYaku.cpp  YakuMatcher.cpp  Yakuman.cpp  YakusMatcher.cpp
test/: CMakeLists.txt  test.cpp
test/Riichi/: Normal-test.cpp  SevenPairs-test.cpp  ThirteenOrphans-test.cpp
test/Rules/: Rule-test.cpp
test/Win/: WinDetector-test.cpp
test/Yakus/: Yaku-test.cpp
